--- a/categories/2020.md
+++ b/categories/2020.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: 2020년
-permalink: /blog/categories/jekyll/
+permalink: /blog/categories/2020/
 ---
 
 <h5> Posts by Category : {{ page.title }} </h5>
